--- a/package.json
+++ b/package.json
@@ -19,5 +19,8 @@
     "babel-plugin-styled-components": "^1.13.2",
     "eslint": "7.30.0",
     "eslint-config-next": "11.0.1"
+  },
+  "engines": {
+    "node": "18.x"
   }
 }
